# trait-gate

./: Cargo.toml  README.md  deny.toml
.github/.workflows/: ci.yaml
.github/workflows/: ci.yaml
examples/: actions_with_data.rs  allow_audits.rs  combinators.rs  context.rs  shared_action.rs  simple.rs  unit_tests.rs
src/: authorizer.rs  decision.rs  lib.rs  prelude.rs
